<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.createnewuser.CreateUserFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/label_name"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        style="@style/ProfileEditText"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        tools:text="James" />

                </com.google.android.material.textfield.TextInputLayout>


                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/view_below"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/store"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:textSize="@dimen/size_15"
                        android:text="Appartment" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/community"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/size_15"

                        android:text="NON Appartment" />


                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAppartment"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/label_appartment_name"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_appartment_name"
                        style="@style/ProfileEditText"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        tools:text="Appartement Name" />


                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilblock_no"
                        style="@style/EditTextTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:hint="@string/label_block_no"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etblock_no"
                            style="@style/ProfileEditText"
                            android:layout_width="match_parent"
                            android:backgroundTint="@color/white"
                            tools:text="Block No" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilFloor_no"
                        style="@style/EditTextTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:hint="@string/label_Floor_no"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etFloor_no"
                            style="@style/ProfileEditText"
                            android:layout_width="match_parent"
                            android:backgroundTint="@color/white"
                            tools:text="Floor No" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilFlat_no"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/label_Flat_no"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFlat_no"
                        style="@style/ProfileEditText"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        tools:text="Flat No" />
                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_Street_name"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/label_street_name"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_Street_name"
                        style="@style/ProfileEditText"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        tools:text="Street Name" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_area_name"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/label_area_name"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_area_name"
                        style="@style/ProfileEditText"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        tools:text="Area Name" />
                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_land_mark"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/label_land_mark"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_land_mark"
                        style="@style/ProfileEditText"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        tools:text="Land Mark" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_pin_code"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/label_pin_code"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_pin_code"
                        style="@style/ProfileEditText"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:inputType="number"
                        tools:text="Pin code" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>